<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculadoraActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_calculadora"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/valor1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ayuda_valor_1"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ayuda_valor_2"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_resultado"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_resultado"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/botonSumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_sumar" />

        <Button
            android:id="@+id/botonMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/boton_multiplicar" />

    </LinearLayout>

</LinearLayout>